--- a/Searching_results.html
+++ b/Searching_results.html
@@ -110,72 +110,71 @@
             </form>
           </div>
           <div class="row searching_results">
-            <div class="col-12 item">
-              <div class="row">
-                <div class="col-12 col-sm-12 col-md-4 col-xl-3"><a class="img_thumbnail_link" href="#">
-                    <div class="img_thumbnail" style="background-image:url(img/news.png)"></div></a></div>
-                <div class="col-12 col-sm-12 col-md-8 col-xl-9">
-                  <div class="body"><a class="news_title" href="#">Lorem ipsum dolor sit amet</a>
-                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus.</div><a class="btn_default btn_red" href="#">Read more</a>
+            <div class="col-12">
+              <div class="item">
+                <div class="row">
+                  <div class="col-12 col-sm-12 col-md-4 col-xl-3"><a class="img_thumbnail_link" href="#">
+                      <div class="img_thumbnail" style="background-image:url(img/news.png)"></div></a></div>
+                  <div class="col-12 col-sm-12 col-md-8 col-xl-9">
+                    <div class="body"><a class="news_title" href="#">Lorem ipsum dolor sit amet</a>
+                      <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus.</div><a class="btn_default btn_red" href="#">Read more</a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 item">
-              <div class="row">
-                <div class="col-12 col-sm-12 col-md-4 col-xl-3"><a class="img_thumbnail_link" href="#">
-                    <div class="img_thumbnail" style="background-image:url(img/news.png)"></div></a></div>
-                <div class="col-12 col-sm-12 col-md-8 col-xl-9">
-                  <div class="body"><a class="news_title" href="#">Lorem ipsum dolor sit amet</a>
-                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus.</div><a class="btn_default btn_red" href="#">Read more</a>
+            <div class="col-12">
+              <div class="item">
+                <div class="row">
+                  <div class="col-12 col-sm-12 col-md-4 col-xl-3"><a class="img_thumbnail_link" href="#">
+                      <div class="img_thumbnail" style="background-image:url(img/news.png)"></div></a></div>
+                  <div class="col-12 col-sm-12 col-md-8 col-xl-9">
+                    <div class="body"><a class="news_title" href="#">Lorem ipsum dolor sit amet</a>
+                      <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus.</div><a class="btn_default btn_red" href="#">Read more</a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 item">
-              <div class="row">
-                <div class="col-12 col-sm-12 col-md-4 col-xl-3"><a class="img_thumbnail_link" href="#">
-                    <div class="img_thumbnail" style="background-image:url(img/news.png)"></div></a></div>
-                <div class="col-12 col-sm-12 col-md-8 col-xl-9">
-                  <div class="body"><a class="news_title" href="#">Lorem ipsum dolor sit amet</a>
-                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus.</div><a class="btn_default btn_red" href="#">Read more</a>
+            <div class="col-12">
+              <div class="item">
+                <div class="row">
+                  <div class="col-12 col-sm-12 col-md-4 col-xl-3"><a class="img_thumbnail_link" href="#">
+                      <div class="img_thumbnail" style="background-image:url(img/news.png)"></div></a></div>
+                  <div class="col-12 col-sm-12 col-md-8 col-xl-9">
+                    <div class="body"><a class="news_title" href="#">Lorem ipsum dolor sit amet</a>
+                      <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus.</div><a class="btn_default btn_red" href="#">Read more</a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-12 item">
-              <div class="row">
-                <div class="col-12 col-sm-12 col-md-4 col-xl-3"><a class="img_thumbnail_link" href="#">
-                    <div class="img_thumbnail" style="background-image:url(img/news.png)"></div></a></div>
-                <div class="col-12 col-sm-12 col-md-8 col-xl-9">
-                  <div class="body"><a class="news_title" href="#">Lorem ipsum dolor sit amet</a>
-                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus.</div><a class="btn_default btn_red" href="#">Read more</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 item">
-              <div class="row">
-                <div class="col-12 col-sm-12 col-md-4 col-xl-3"><a class="img_thumbnail_link" href="#">
-                    <div class="img_thumbnail" style="background-image:url(img/news.png)"></div></a></div>
-                <div class="col-12 col-sm-12 col-md-8 col-xl-9">
-                  <div class="body"><a class="news_title" href="#">Lorem ipsum dolor sit amet</a>
-                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus.</div><a class="btn_default btn_red" href="#">Read more</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 item">
-              <div class="row">
-                <div class="col-12 col-sm-12 col-md-4 col-xl-3"><a class="img_thumbnail_link" href="#">
-                    <div class="img_thumbnail" style="background-image:url(img/news.png)"></div></a></div>
-                <div class="col-12 col-sm-12 col-md-8 col-xl-9">
-                  <div class="body"><a class="news_title" href="#">Lorem ipsum dolor sit amet</a>
-                    <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dolor magna, feugiat nec quam vestibulum, congue suscipit lectus.</div><a class="btn_default btn_red" href="#">Read more</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+          </div>
+          <div class="row category_list">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3"><a class="category_item" href="#">
+                <picture><img src="img/image_1.png"/></picture>
+                <div class="c_title">MAUNFELD CEOK.656B</div>
+                <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3"><a class="category_item" href="#">
+                <picture><img src="img/image_1.png"/></picture>
+                <div class="c_title">MAUNFELD CEOK.656B</div>
+                <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3"><a class="category_item" href="#">
+                <picture><img src="img/image_1.png"/></picture>
+                <div class="c_title">MAUNFELD CEOK.656B</div>
+                <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3"><a class="category_item" href="#">
+                <picture><img src="img/image_1.png"/></picture>
+                <div class="c_title">MAUNFELD CEOK.656B</div>
+                <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3"><a class="category_item" href="#">
+                <picture><img src="img/image_1.png"/></picture>
+                <div class="c_title">MAUNFELD CEOK.656B</div>
+                <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3"><a class="category_item" href="#">
+                <picture><img src="img/image_1.png"/></picture>
+                <div class="c_title">MAUNFELD CEOK.656B</div>
+                <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
           </div>
           <div class="pagination_block">
             <ul class="pagination_nav">
